Blender crashes on VSE zoom / scroll timeline sometimes #61043

Closed
opened 2019-01-31 02:24:27 +01:00 by Adrian C. · 14 comments
First-time contributor

System Information
Operating system: Windows 7 Professional 64 bit SP1
Graphics card: NVidia GeForce GT 630

Blender Version
Broken: 2.80 Beta 64bit - a1ae04d15a (2019-01-29 22:41)
Worked: 2.79 (5bd8ac9 - 2017-09-11 10:43) - not sure about 32/64 bit

Short description of error
Blender crashes (simply dissapears) after some scrolling / zooming in video sequencer. No errors thrown.

Exact steps for others to reproduce the error
Please see attached blend file.

When working in Video mode, inside video sequencer area, Blender (more or less) randomly crashes on operations like scrolling the timeline (with middle mouse button), zoomin in or out in the timeline (with mouse wheel), even when pressing the Home button to zoom out full. It doesn't always happen after a precise amount of steps - sometimes all it takes is a single zoom out, other times you have to zoom in, scroll around a little, zoom out, etc. But, with the attached example, in less than a minute this bug can be reproduced.

Tipically, this bug occurs after i work on video editing for about 15 minutes or so, after i have around 30 strips or more (type doesn't matter, i have mixed audio, video and images). It's not a problem of memory, i have enough. Also, the window doesn't simply dissapears (as in becomes invisible with blender executable still runnning in background); no, the blender.exe is no longer running.

Also, i've taken the archive version of Blender from your website, i did not compile it myself (hence did not modify it).

If you need further informations, feel free to ask :)
Thank you verry much

crash.blend

system-info_2-80.txt

**System Information** Operating system: Windows 7 Professional 64 bit SP1 Graphics card: NVidia GeForce GT 630 **Blender Version** Broken: 2.80 Beta 64bit - a1ae04d15a9f (2019-01-29 22:41) Worked: 2.79 (5bd8ac9 - 2017-09-11 10:43) - not sure about 32/64 bit **Short description of error** Blender crashes (simply dissapears) after some scrolling / zooming in video sequencer. No errors thrown. **Exact steps for others to reproduce the error** Please see attached blend file. When working in Video mode, inside video sequencer area, Blender (more or less) randomly crashes on operations like scrolling the timeline (with middle mouse button), zoomin in or out in the timeline (with mouse wheel), even when pressing the Home button to zoom out full. It doesn't always happen after a precise amount of steps - sometimes all it takes is a single zoom out, other times you have to zoom in, scroll around a little, zoom out, etc. But, with the attached example, in less than a minute this bug can be reproduced. Tipically, this bug occurs after i work on video editing for about 15 minutes or so, after i have around 30 strips or more (type doesn't matter, i have mixed audio, video and images). It's not a problem of memory, i have enough. Also, the window doesn't simply dissapears (as in becomes invisible with blender executable still runnning in background); no, the blender.exe is no longer running. Also, i've taken the archive version of Blender from your website, i did not compile it myself (hence did not modify it). If you need further informations, feel free to ask :) Thank you verry much [crash.blend](https://archive.blender.org/developer/F6459506/crash.blend) [system-info_2-80.txt](https://archive.blender.org/developer/F6459537/system-info_2-80.txt)
Author
First-time contributor

Added subscriber: @adrian.null

Added subscriber: @adrian.null

Added subscriber: @iss

Added subscriber: @iss

Can you please run blender from command line with --debug argument and post output here? (or rather paste it there http://pasteall.org/ and link it here)
If it will produce a crash report it would be nice to include that also.

Can you please run blender from command line with --debug argument and post output here? (or rather paste it there http://pasteall.org/ and link it here) If it will produce a crash report it would be nice to include that also.
First-time contributor

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
First-time contributor

Note: This sounds similar to #53686 (VSE Render crash when zooming timeline)

Note: This sounds similar to #53686 (VSE Render crash when zooming timeline)
Author
First-time contributor

Hello everyone,
I've enabled "--debug" argument as asked, however surprise surprise ... Blender never crashed. I could finish a video i was working on, not one single problem.
I'm attaching the output here anyway, in case it helps somehow.
Since the crash seems to be memory related and i see the first line in debug output is "Switching to fully guarded memory allocator.", i'm guessing there's something about that that makes it not crash anymore while debugging.

Anyway, to still show you how it crashes, i've opened it again normally, i've opened the same project and i've attached Visual Studio debugger, while capturing my screen. I'm attaching several TXT files with details, including what assembler code was dissasembled from Visual Studio, and also posting a youtube link to that video. You can clearly see me perform just a couple of mousewheel up zooms and it crashes.

Oh, and regarding what @ChristopherAnderssarian said earlier - in my case i'm not rendering anything and it's also not related to text strips (i don't even have such in these projects).

blender_crash_windows_details.txt

blender_crash_message.txt

blender_crash_disassembly.txt

debugout_blender_nocrash.txt

https://youtu.be/mnJPvoTzCF8

Anyway, i'll use the "--debug" switch now as a workaround, thanks for pointing it out :) If i can still help you somehow, feel free to ask.

Cheers

Hello everyone, I've enabled "--debug" argument as asked, however surprise surprise ... Blender never crashed. I could finish a video i was working on, not one single problem. I'm attaching the output here anyway, in case it helps somehow. Since the crash seems to be memory related and i see the first line in debug output is "Switching to fully guarded memory allocator.", i'm guessing there's something about that that makes it not crash anymore while debugging. Anyway, to still show you how it crashes, i've opened it again normally, i've opened the same project and i've attached Visual Studio debugger, while capturing my screen. I'm attaching several TXT files with details, including what assembler code was dissasembled from Visual Studio, and also posting a youtube link to that video. You can clearly see me perform just a couple of mousewheel up zooms and it crashes. Oh, and regarding what @ChristopherAnderssarian said earlier - in my case i'm not rendering anything and it's also not related to text strips (i don't even have such in these projects). [blender_crash_windows_details.txt](https://archive.blender.org/developer/F6469063/blender_crash_windows_details.txt) [blender_crash_message.txt](https://archive.blender.org/developer/F6469064/blender_crash_message.txt) [blender_crash_disassembly.txt](https://archive.blender.org/developer/F6469065/blender_crash_disassembly.txt) [debugout_blender_nocrash.txt](https://archive.blender.org/developer/F6469067/debugout_blender_nocrash.txt) https://youtu.be/mnJPvoTzCF8 Anyway, i'll use the "--debug" switch now as a workaround, thanks for pointing it out :) If i can still help you somehow, feel free to ask. Cheers

I can confirm a frequent crash due to drawing sound waveform when strip has endstill frames. drawseqwave seems to be using length of strip to calculate data length

99.9% reproducible(I guess platform may play role) in my blend file. Just hit draw waveform.

code for creating waveform seems OK by just looking at it
I will have to look if something modifies waveform->length
This bug was probably present in 2.7 also as you can see artifacts of wrong data on end of waveforms when zoomed closely.

@adrian.null if you need to finish some work, either disable waveforms, or do cut some 10-50 frames from end of sound data and disable waveforms on this small strip, or change length by -1 to -5 so sound strip will not read to very end of data. this should prevent crashes.

Just a side note - I use sound strips a lot and never noticed this issue - it may be also codec issue - especially mp3 can report longer length of data stream then actual length. Such issue would be quite tricky to solve. By converting sounds to wave or flac format you may also eliminate this issue + as a bonus, waveforms will load faster :)

crash.blend

I can confirm a frequent crash due to drawing sound waveform when strip has endstill frames. `drawseqwave` seems to be using length of strip to calculate data length 99.9% reproducible(I guess platform may play role) in my blend file. Just hit draw waveform. code for creating waveform seems OK by just looking at it I will have to look if something modifies waveform->length This bug was probably present in 2.7 also as you can see artifacts of wrong data on end of waveforms when zoomed closely. @adrian.null if you need to finish some work, either disable waveforms, or do cut some 10-50 frames from end of sound data and disable waveforms on this small strip, or change length by -1 to -5 so sound strip will not read to very end of data. this should prevent crashes. Just a side note - I use sound strips a lot and never noticed this issue - it may be also codec issue - especially mp3 can report longer length of data stream then actual length. Such issue would be quite tricky to solve. By converting sounds to wave or flac format you may also eliminate this issue + as a bonus, waveforms will load faster :) [crash.blend](https://archive.blender.org/developer/F6469212/crash.blend)
Author
First-time contributor

Thanks a lot for the info, now i understand :)

Thanks a lot for the info, now i understand :)

Added subscriber: @neXyon

Added subscriber: @neXyon

@neXyon, not sure if you are involved in audio codec stuff, can you confirm my claim: "especially mp3 can report longer length of data stream then actual length." This is just a general observation from number of mp3 files, that behave this way.

@neXyon, not sure if you are involved in audio codec stuff, can you confirm my claim: "especially mp3 can report longer length of data stream then actual length." This is just a general observation from number of mp3 files, that behave this way.
First-time contributor

This issue was referenced by d9d72cc9cb

This issue was referenced by d9d72cc9cba5db30d4104f8a5b5a867f72b6fbfe
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Joerg Mueller self-assigned this 2019-02-01 16:00:31 +01:00
Member

The bug was introduced in dbe23c5456, so it only exists in 2.8, not 2.7. And yes @iss I can confirm that, but it has nothing to do with this bug.

The bug was introduced in dbe23c5456, so it only exists in 2.8, not 2.7. And yes @iss I can confirm that, but it has nothing to do with this bug.

In #61043#611875, @neXyon wrote:
The bug was introduced in dbe23c5456, so it only exists in 2.8, not 2.7. And yes @iss I can confirm that, but it has nothing to do with this bug.

Thanks for fix! I was as usual looking at wrong place...

> In #61043#611875, @neXyon wrote: > The bug was introduced in dbe23c5456, so it only exists in 2.8, not 2.7. And yes @iss I can confirm that, but it has nothing to do with this bug. Thanks for fix! I was as usual looking at wrong place...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61043
No description provided.