Fix T61043: Blender crashes on VSE zoom / scroll timeline sometimes